deploy/k8s/overlays/staging/ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-elephantalpha-staging
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: staging.elephantalpha.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-elephantalpha
                port:
                  number: 80
